<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_top"
        android:icon="@drawable/select_top"
        android:title="@string/top" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/select_news"
        android:title="@string/news" />
    <item
        android:id="@+id/navigation_sg"
        android:icon="@drawable/select_search"
        android:title="@string/se"

        />
    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/select_favorite"
        android:title="@string/like" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/select_profile"
        android:title="@string/genre" />

</menu>