<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text = "@string/settings_m"
            android:textColor="@color/red_light"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:alpha="0.8"
            android:textSize="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:layout_marginTop="25dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Switch
                    android:textSize="20dp"
                    android:id="@+id/adaptivePlayer"
                    android:text="@string/adaptiveplayer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
                <Switch
                    android:textSize="20dp"
                    android:id="@+id/fullscreen"
                    android:text="@string/full_screen"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
                <!--<Switch-->
                    <!--android:textSize="20dp"-->
                    <!--android:id="@+id/nightTheme"-->
                    <!--android:text="Ночная тема"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp" />-->
                <RelativeLayout
                    android:layout_marginRight="50dp"
                    android:id="@+id/clear"
                    android:layout_marginTop="15dp"
                    android:alpha="0.7"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <ImageView
                        android:src="@drawable/bg_clear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:text="@string/clear_all_downloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ad"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_marginRight="50dp"
            android:id="@+id/ad_block"

            android:layout_marginTop="15dp"
            android:alpha="0.7"
            app:cardBackgroundColor="@color/gray"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView
                android:src="@drawable/button_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/mo_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/promo"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:padding="7dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/red_light"
            android:text="@string/promokod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>


</RelativeLayout>