<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text = "@string/like"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/red_light"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:alpha="0.8"
                    android:textSize="35sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/vk"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_iconfinder_vk_1279056"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <ImageView
                    android:id="@+id/settings"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:tint="@color/gray"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_outline_settings_24px"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/album_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/albums"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/moreAlbums"
                        android:textSize="15sp"
                        android:textColor="@color/red_light"
                        android:text="@string/more"
                        android:layout_marginRight="20sp"
                        android:gravity="bottom"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerAlbum"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                    </android.support.v7.widget.RecyclerView>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <LinearLayout
                    android:id="@+id/like_bg"
                    android:layout_weight="1"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@color/red_light"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/like"
                        android:padding="6dp"
                        android:tint="@color/white"
                        android:src="@drawable/like"
                        android:layout_width="50dp"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/download_bg"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="18dp"
                    android:background="@color/gray_light"

                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="6dp"
                        android:id="@+id/download"
                        android:tint="@color/red_light"
                        android:src="@drawable/ic_sd"
                        android:layout_width="50dp"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:text="@string/no_izbran"
                android:id="@+id/error_text"
                android:visibility="gone"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>